scribble-cli/src/test/resources/bad/todo/Choice07b.scr
module bad.wfchoice.gchoice.Choice07b;


global protocol Choice7b(role A, role B)
{
	choice at A
	{
		/*//TODO
		par
		{
			l1() from A to B;
		}
		and
		{
			//l2() from B to A;  // Uncomment is bad
			l2() from A to B;
		}*/
	}
	or
	{
		l2() from A to B;  // Uncomment is bad
		l3() from A to B;
	}
}

